@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Credentials
 
 {{$NEXT}}
+          - Add --editor flag to credentials edit
 
 0.002     2024-01-31 03:01:03+01:00 Europe/Brussels
           - Adapt to supporting multiple keys
